src/App.css
body {
  font-family: "Roboto", Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: #f5f7fa;
  color: #333;
  box-sizing: border-box;
}

html {
  scrollbar-gutter: stable; /* Reserve space for scrollbar */
}

.App {
  text-align: center;
  padding: 20px;
}

.app-header {
  background-color: #0073e6;
  color: white;
  padding: 20px;
  border-radius: 5px;
}

.subtitle {
  margin: 5px 0 20px;
  font-size: 16px;
}

.input-container {
  margin: 20px auto;
  display: flex;
  justify-content: center;
  gap: 10px;

}

input[type="text"] {
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
  width: 250px;
}

button {
  padding: 10px 15px;
  font-size: 16px;
  background-color: #0073e6;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

button:hover {
  background-color: #005bb5;
}

.table-container {
  margin: 10px auto;
  width: 80%;
  background-color: white;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  overflow: hidden;
}

table {
  width: 100%;
  border-collapse: collapse;
}

th,
td {
  padding: 10px;
  text-align: left;
}

th {
  background-color: #f0f4f8;
}

tr:nth-child(even) {
  background-color: #f9fbfd;
}

select {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #ccc;
}

.loading-message {
  font-size: 18px;
  color: #666;
}

h2, h3 {
  margin: 5px 0;
}

.metadata-container {
  max-width: 100px;
  margin: 0 auto;
}


.table-content {
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.3s ease-out;
}

.table-content.expanded {
  max-height: 1000px; /* Arbitrary large value to ensure full expansion */
  transition: max-height 0.3s ease-in;
}

.table-header {
    background-color: rgb(200, 200, 200);
    padding: 5px;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    border-bottom: 2px solid rgb(220, 220, 220);
}

.collapse-button {
  background: none;
  border: none;
  font-size: 15px;
  font-weight: bold;
  cursor: pointer;
  color: #333;
  outline: none;
  margin-left: auto; /* Push the button to the rightmost end */
}

.collapse-button:hover {
  color: #000306; /* Change color on hover for better feedback */
}


.table-container {
  margin-bottom: 10px;
}

.toggle-update-button {
  padding: 5px 5px;
  border: none;
  border-radius: 5px;
  color: white;
  cursor: pointer;
  font-size: 12px;
  transition: background-color 0.3s ease, transform 0.2s ease;
}

.toggle-update-button.enabled {
  background-color: green;
}

.toggle-update-button.disabled {
  background-color: red;
}

.toggle-update-button:hover {
  transform: scale(1.0);
}

.header-controls {
  display: flex;
  gap: 10px;
  align-items: center;
}



/* Style for the toggle switch */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 24px; /* Slimmed down the height */
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #f44336; /* Red background for disabled state */
  transition: 0.4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px; /* Slimmed down the height */
  width: 16px; /* Reduced the width of the circle */
  border-radius: 50%;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #4CAF50; /* Green background for enabled state */
}

input:checked + .slider:before {
  transform: translateX(26px); /* Move the circle to the right */
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

